src/objects/MoneyGuidePro_License__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>User ID</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>MoneyGuidePro License</label>
    <nameField>
        <label>MoneyGuidePro License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MoneyGuidePro Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>